--- a/src/main/resources/templates/cadastroCliente.html
+++ b/src/main/resources/templates/cadastroCliente.html
@@ -96,6 +96,7 @@
                 <select id="inputGenero" class="form-select">
                   <option selected>Masculino</option>
                   <option>Feminino</option>
+                    <option>Nenhum</option>
                 </select>
               </div>
               <div class="col-md-3">
